# lib-gles

./: build.gradle
src/androidTest/java/com/bbt2000/gles/: ExampleInstrumentedTest.kt
src/main/cpp/: CMakeLists.txt
src/main/cpp/3d/: CMakeLists.txt  loadObj.cpp
src/main/cpp/common/: GLContext.cpp  GLContext.h  asset_util.cpp  asset_util.h  egl_util.cpp  egl_util.h  fbo_util.cpp  fbo_util.h  gl_util.c  gl_util.cpp  gl_util.h  shader_util.cpp  shader_util.h
src/main/cpp/include/: AssetUtil.h  EglUtil.h  GLContext.h  GlUtil.h  LogUtil.h  ShaderUtil.h  android_log.h  fboUtil.h
src/main/cpp/jni/: jni.cpp
src/main/cpp/test/01_basics/: 01_native_window.h  03_vbo.h  04_ebo.h  05_vao.h  06_vao_vbo_ebo.h  07_texture.h  08_yuv.h  08_yuv2.h  09_fbo.h  10_rgb2nv12.h  10_rgb2vyuy.h  CMakeLists.txt  test.cpp
src/main/cpp/test/01_basics/shader/: shader.glsl  shader.h  shader_tex.h  shader_yuv.h
src/main/java/com/bbt2000/gles/base/: BaseSurfaceView.kt
src/main/java/com/bbt2000/gles/jni/: JniGL.kt
src/main/java/com/bbt2000/gles/widget/: AutoFitGLSurfaceView.kt  AutoFitSurfaceView.kt  AutoFitTextureView.kt
src/test/java/com/bbt2000/gles/: ExampleUnitTest.kt
